Fixed margins on no items in cart else stmnt. Amended font size and spacing for statement and navbar words

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -83,9 +83,9 @@
     padding-top: 5px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 300;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     color: #4B494A;
     text-shadow: 1px 1px #E2AA72;
 } 
@@ -105,7 +105,8 @@
     color: #E2AA72;
     text-shadow: 1px 1px #4B494A;
     text-align: center;
-    display: block;    
+    display: block;   
+    letter-spacing: 1px; 
 }
 
 #search-bar {
@@ -219,6 +220,11 @@ caption p {
 
 .alcohol-cont {
     font-weight: bolder;  
+}
+
+.no-items {
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 /*-----------------------------------Footer*/
